--- a/style/index.scss
+++ b/style/index.scss
@@ -52,3 +52,5 @@
 @import "./scss/IAI/rma.scss";
 @import "./scss/IAI/search.scss";
 @import "./scss/our/header.scss";
+@import "./scss/our/productpage.scss";
+
