--- a/style/scss/IAI/projector/p-main.scss
+++ b/style/scss/IAI/projector/p-main.scss
@@ -930,6 +930,7 @@
     }
     .projector_prices__percent {
         padding-left: 3px;
+        display: none;
     }
     .projector_prices__price_wrapper {
         margin-bottom: 2rem;
