--- a/style/scss/IAI/fonts.scss
+++ b/style/scss/IAI/fonts.scss
@@ -1,52 +1,39 @@
+
 @font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
+    font-family: Futura;
     font-weight: 300;
-    font-style: normal;
     font-display: swap;
+    src: url(../assets/fonts/futuraltpro-light.otf) format("truetype")
 }
+
 @font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
+    font-family: Futura;
     font-weight: 400;
-    font-style: normal;
     font-display: swap;
+    src: url(../assets/fonts/futuraltpro-book.woff) format("woff"),url(../assets/fonts/futuraltpro-book.otf) format("truetype")
 }
+
 @font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
-    font-weight: 600;
-    font-style: normal;
+    font-family: Futura;
+    font-weight: 500;
     font-display: swap;
+    src: url(../assets/fonts/futuraltpro-medium.woff) format("woff"),url(../assets/fonts/futuraltpro-medium.otf) format("truetype")
 }
+
 @font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
-    font-weight: 300;
-    font-style: normal;
+    font-family: Futura;
+    font-weight: 700;
     font-display: swap;
+    src: url(../assets/fonts/futuraltpro-bold.woff) format("woff"),url(../assets/fonts/futuraltpro-bold.otf) format("truetype")
 }
-@font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: "Arial", "Helvetica", sans-serif;
-    src: url("/data/include/fonts/Arial-Regular.ttf");
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
+
 @font-face {
     font-family: "FontAwesome";
     src:
-        url("../../assets/fonts/fontello.eot#iefix") format("embedded-opentype"),
-        url("../../assets/fonts/fontello.woff?r=1698404668") format("woff"),
-        url("../../assets/fonts/fontello.ttf?r=1698404668") format("truetype"),
-        url("../../assets/fonts/fontello.svg#fontello") format("svg");
+        url("../assets/fonts/fontello.eot#iefix") format("embedded-opentype"),
+        url("../assets/fonts/fontello.woff?r=1698404668") format("woff"),
+        url("../assets/fonts/fontello.ttf?r=1698404668") format("truetype"),
+        url("../assets/fonts/fontello.svg#fontello") format("svg");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
