--- a/style/scss/IAI/header.scss
+++ b/style/scss/IAI/header.scss
@@ -12,11 +12,11 @@ header {
     background: rgba(255, 255, 255, 0.8);
     border-bottom: 1px solid #c4c7c8;
     font-size: 0.93em;
-    display: grid;
-    grid-template-columns: 1fr auto auto auto;
-    grid-template-areas:
-        "bars_top bars_top bars_top bars_top"
-        "rabateCode rabateCode rabateCode rabateCode" "freeShipping freeShipping freeShipping freeShipping" "logo menu_search menu_basket menu_categories";
+    // display: grid;
+    // grid-template-columns: 1fr auto auto auto;
+    // grid-template-areas:
+    //     "bars_top bars_top bars_top bars_top"
+    //     "rabateCode rabateCode rabateCode rabateCode" "freeShipping freeShipping freeShipping freeShipping" "logo menu_search menu_basket menu_categories";
     justify-content: flex-start;
     height: auto;
     left: 0;
@@ -39,9 +39,10 @@ header {
     .breadcrumbs {
         grid-area: breadcrumbs;
         padding-top: 20px;
-        padding-bottom: 10px;
+        padding-bottom: 0;
         font-size: 0.93em;
         display: none;
+        border-bottom: 1px solid #b29370;
     }
     .navbar-collapse {
         display: none;
@@ -78,8 +79,8 @@ header {
         font-size: 1.3rem;
         z-index: 100;
         position: fixed;
-        background: cornsilk;
-        border: 1px solid #c4c7c8;
+        background:#f4f4f4;
+        // border: 1px solid #c4c7c8;
         left: 0 !important;
         right: 0 !important;
         box-shadow: 0px 0px 20px -2px rgba(0, 0, 0, 0.2);
@@ -93,13 +94,14 @@ header {
             justify-content: center;
             align-items: center;
             max-width: 1200px;
-            background-color: white;
+            // background-color: white;
             padding: 2rem 0;
         }
         .nav-link {
-            text-transform: uppercase;
+            text-transform: none;
             font-size: 1.4rem;
             padding: 10px;
+
         }
         > .nav-item.--all {
             grid-column: span 5;
@@ -360,19 +362,22 @@ html.--scroll-down {
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #333;
+        
         text-decoration: none;
-        font-size: 2.4rem;
+        font-size: 1.8rem;
         opacity: 1;
         transition: 0.3s opacity;
-        color: #333;
+        color: #b29370;
         &:hover {
-            color: #b29370;
-            color: #b29370;
+          
+            color: #000;
         }
         &:before {
             content: "\F002";
             font-family: FontAwesome;
+        }
+        @media all and (max-width:500px){
+            display: none;
         }
     }
     .menu_search__submit {
@@ -412,7 +417,7 @@ html.--scroll-down {
         height: 45px;
         box-shadow: none;
         background: #fff;
-        color: #333;
+        color: #000;
         width: 100%;
         padding-right: 8rem;
         &::-webkit-input-placeholder {
@@ -713,8 +718,8 @@ span.menu_settings_currency {
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
         border-radius: 0;
         padding: 5rem 2.5rem 1.5rem;
-        top: -2rem;
-        left: -2.5rem;
+        top: 0rem;
+        right: -1rem;
         z-index: -1;
         min-width: 230px;
         max-width: 300px;
@@ -817,11 +822,19 @@ span.menu_settings_currency {
     min-width: 50%;
     transition: outline 0.3 ease-in;
     &:hover {
-        outline: 1px solid gray;
+        // outline: 1px solid gray;
     }
 }
 .mega-menu-photo {
     max-width: 50%;
+    .p-name{
+        font-size: 1.1em;
+        font-weight: 400;
+
+    }
+    .p-price{
+        font-weight: 600;
+    }
 }
 
 ul.categories-list_level2 {
