--- a/style/scss/IAI/main.scss
+++ b/style/scss/IAI/main.scss
@@ -32,11 +32,18 @@ html.svgclippaths {
         }
     }
 }
+html{
+    font-family: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji";
+    line-height: 1.5;
+}
 body {
     margin: 0;
     width: 100%;
-    font-family: "Arial", "Helvetica", sans-serif, "Arial", sans-serif;
-    font-size: 1.4rem;
+    
+    font-size: 10px;
+    font-family: Futura;
+    font-weight: 500;
+    -webkit-font-smoothing: antialiased!important;
     line-height: 1.3;
     color: #333;
     background: #fff;
@@ -251,7 +258,19 @@ html.--place-order-page {
         padding: calc(30px + 60px) calc(15px + env(safe-area-inset-right)) 0;
     }
 }
+a:hover{
+    text-decoration: underline;
+}
 
+.text-center{
+    text-align: center;
+}
+.text-right{
+    text-align: right;
+}
+.text-uppercase{
+    text-transform: uppercase;
+}
 aside[class*="col-"] {
     display: none;
     background: #fff;
