--- a/style/scss/IAI/bootstrap.scss
+++ b/style/scss/IAI/bootstrap.scss
@@ -4376,7 +4376,7 @@ img.b-loaded {
     align-items: flex-start;
 }
 .article__date_name {
-    order: -1;
+    // order: -1;
     margin-bottom: 1rem;
     display: flex;
 }
