--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -5212,11 +5212,11 @@
         }
     }
     .article__item {
-        display: block;
+        // display: block;
     }
     .article__image_wrapper {
-        float: left;
-        max-width: 35%;
+        // float: left;
+        // max-width: 35%;
         margin: 0 10px 5px 0;
     }
     .article__text.--date {
