--- a/style/scss/our/header.scss
+++ b/style/scss/our/header.scss
@@ -73,6 +73,16 @@ header {
         text-decoration: none;
         text-transform: uppercase;
     }
+    @media all and (max-width:976px){
+        .main-holder{
+             > .col:nth-child(3),
+             > .col:nth-child(2){
+                justify-content: end;
+                display: flex;
+                max-width: 50px;
+             }
+        }
+    }
 }
 
 *:hover .menu-item-underline {
