--- a/style/scss/IAI/photos.scss
+++ b/style/scss/IAI/photos.scss
@@ -7,6 +7,7 @@
 .photos__photo {
     display: block;
     width: auto;
+    // min-height: 50vh;
 }
 .photos__photo.--nav {
     max-height: 63px;
@@ -19,6 +20,7 @@
     background: #fff;
     color: #333;
     text-decoration: none;
+    // min-height: 50vh;
     &:hover {
         color: #b29370;
     }
