--- a/style/scss/IAI/projector/p-main.scss
+++ b/style/scss/IAI/projector/p-main.scss
@@ -1626,7 +1626,7 @@
     }
 }
 .projector_details__wrapper {
-    border: 1px solid #c4c7c8;
+    border-top: 1px solid #c4c7c8;
     border-radius: 0;
     padding: 1.5rem;
     margin-bottom: 1rem;
