--- a/style/scss/IAI/traits.scss
+++ b/style/scss/IAI/traits.scss
@@ -16,8 +16,9 @@
     display: none;
 }
 .traits__label {
-    width: 95px;
-    min-width: 95px;
+    text-transform: uppercase;
+    // width: 146px;
+    min-width: 175px;
     overflow: hidden;
     text-overflow: ellipsis;
     &:after {
