--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -5193,13 +5193,13 @@
         }
     }
     .product__icon {
-        height: 20rem;
+        // height: 30rem;
         img {
-            max-height: 20rem;
+            // max-height: 30rem;
         }
     }
     .product__name {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
     .product__opinion {
         .note {
