Update HTML and SCSS files for search page

--- a/style/index.scss
+++ b/style/index.scss
@@ -53,4 +53,4 @@
 @import "./scss/IAI/search.scss";
 @import "./scss/our/header.scss";
 @import "./scss/our/productpage.scss";
-
+@import "./scss/our/searchpage.scss";
