--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -8145,6 +8145,26 @@
             margin-bottom: 0;
         }
     }
+
+    .search-results-top-menu{
+        font-family: Futura;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 20px;
+    }
+    .sort-dropdown-trigger{
+           font-family: Futura;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 20px;
+    }
+    .filter-dropdown-trigger{
+           font-family: Futura;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 20px;
+    }
+    
     .search_name {
         display: flex;
         align-items: center;
