dodałem przyciski filtrowanie, sortowanie, oraz radar chart zamiast zdjęć

--- a/style/scss/IAI/button.scss
+++ b/style/scss/IAI/button.scss
@@ -96,7 +96,7 @@
     background: none;
     padding: 0;
     border: 1px solid transparent;
-    font-family: "Arial", "Helvetica", sans-serif, "Arial", sans-serif;
+    font-family: "Futura", "Helvetica", sans-serif, "Arial", sans-serif;
     display: inline-block;
     text-decoration: none;
     color: #b29370;
