--- a/style/scss/IAI/bootstrap.scss
+++ b/style/scss/IAI/bootstrap.scss
@@ -1726,7 +1726,7 @@ button.btn.--large {
     }
 }
 .headline {
-    font-family: "Arial", "Helvetica", sans-serif, "Arial", sans-serif;
+    font-family: "Futura", "Helvetica", sans-serif, "Arial", sans-serif;
     color: #333;
     display: flex;
     align-items: center;
