--- a/style/scss/IAI/filters.scss
+++ b/style/scss/IAI/filters.scss
@@ -118,6 +118,7 @@
 .filters__toggler {
     display: block;
     margin-bottom: 1.5rem;
+   
     &:not(.--not-expandable) {
         .btn.--icon-right {
             &:before {
@@ -142,6 +143,7 @@
         padding: 0.75rem 0;
         span {
             font-size: 1.3rem;
+            font-family: 'Futura';
         }
     }
 }
@@ -173,13 +175,14 @@
             padding: 0.75rem 0;
             span {
                 font-size: 1.3rem;
+                font-family: 'Futura';
             }
         }
     }
     a.--groupToggle {
         margin-top: 1.5rem;
     }
-    display: none;
+    display: block;
 }
 .filters__toggler.--groupToggle {
     margin-top: 1.5rem;
