--- a/style/scss/IAI/main.scss
+++ b/style/scss/IAI/main.scss
@@ -32,18 +32,18 @@ html.svgclippaths {
         }
     }
 }
-html{
+html {
     font-family: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji";
     line-height: 1.5;
 }
 body {
     margin: 0;
     width: 100%;
-    
+
     font-size: 10px;
     font-family: Futura;
     font-weight: 500;
-    -webkit-font-smoothing: antialiased!important;
+    -webkit-font-smoothing: antialiased !important;
     line-height: 1.3;
     color: #333;
     background: #fff;
@@ -258,18 +258,21 @@ html.--place-order-page {
         padding: calc(30px + 60px) calc(15px + env(safe-area-inset-right)) 0;
     }
 }
-a:hover{
+a:hover {
     text-decoration: underline;
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
-.text-right{
+.text-right {
     text-align: right;
 }
-.text-uppercase{
+.text-uppercase {
     text-transform: uppercase;
+}
+.headline__name {
+    color: #b29370;
 }
 aside[class*="col-"] {
     display: none;
