--- a/style/scss/our/searchpage.scss
+++ b/style/scss/our/searchpage.scss
@@ -1,41 +1,54 @@
-input[type="checkbox"] {
-    height: 0;
-    width: 0;
-    visibility: hidden;
+div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
+    input[type="checkbox"] {
+        height: 0;
+        width: 0;
+        visibility: hidden;
+    }
+
+    label {
+        cursor: pointer;
+        text-indent: -9999px;
+        width: 40px;
+        height: 14px;
+        background: rgb(28, 28, 28);
+        display: block;
+        border-radius: 100px;
+        position: relative;
+    }
+
+    label:after {
+        content: "";
+        position: absolute;
+        top: -3;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background: #b29370;
+        border-radius: 90px;
+        transition: 0.3s;
+    }
+
+    input:checked + label {
+        background: #bada55;
+    }
+
+    input:checked + label:after {
+        left: calc(100%);
+        transform: translateX(-100%);
+    }
+
+    label:active:after {
+        width: 30px;
+    }
 }
 
-label {
-    cursor: pointer;
-    text-indent: -9999px;
-    width: 40px;
-    height: 14px;
-    background: rgb(28, 28, 28);
-    display: block;
-    border-radius: 100px;
-    position: relative;
+.graph-background {
+    background-color: #ede5da;
+    width: 360px;
+    height: 383px;
+    display: none;
 }
 
-label:after {
-    content: "";
-    position: absolute;
-    top: -3;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    background: #b29370;
-    border-radius: 90px;
-    transition: 0.3s;
-}
-
-input:checked + label {
-    background: #bada55;
-}
-
-input:checked + label:after {
-    left: calc(100%);
-    transform: translateX(-100%);
-}
-
-label:active:after {
-    width: 30px;
-}
+// .additional-info {
+//     text-wrap: balance;
+// }
