--- a/style/scss/our/searchpage.scss
+++ b/style/scss/our/searchpage.scss
@@ -49,13 +49,9 @@ div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
     display: none;
 }
 
-.fa .fa-chevron-down {
-    font-size: 1.5rem;
-    color: #b29370;
-    margin-left: 10px;
-}
-.fa .fa-chevron-up {
-    font-size: 1.5rem;
-    color: #b29370;
-    margin-left: 10px;
+.sort-dropdown-trigger,
+.filter-dropdown-trigger {
+    i {
+        color: #b29370 !important;
+    }
 }
