--- a/style/scss/IAI/filters.scss
+++ b/style/scss/IAI/filters.scss
@@ -113,12 +113,12 @@
 }
 .filters__block {
     position: relative;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 .filters__toggler {
     display: block;
-    margin-bottom: 1.5rem;
-   
+    // margin-bottom: 1.5rem;
+
     &:not(.--not-expandable) {
         .btn.--icon-right {
             &:before {
@@ -143,7 +143,7 @@
         padding: 0.75rem 0;
         span {
             font-size: 1.3rem;
-            font-family: 'Futura';
+            font-family: "Futura";
         }
     }
 }
@@ -175,7 +175,7 @@
             padding: 0.75rem 0;
             span {
                 font-size: 1.3rem;
-                font-family: 'Futura';
+                font-family: "Futura";
             }
         }
     }
