--- a/style/index.scss
+++ b/style/index.scss
@@ -54,3 +54,5 @@
 @import "./scss/our/header.scss";
 @import "./scss/our/productpage.scss";
 @import "./scss/our/searchpage.scss";
+@import "./scss/our/mainpage.scss";
+
