--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -11040,7 +11040,7 @@
     html {
         &:not(.--ios) {
             .main_page {
-                padding-top: 60px;
+                // padding-top: 60px;
             }
         }
         &:not(.--scroll-down) {
