--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -3495,6 +3495,7 @@
         grid-template-columns: repeat(6, minmax(0, 1fr));
         grid-gap: 1.5rem;
         font-family: "Futura";
+        direction: rtl;
     }
 
     #filter-wrapper {
