Poprawki przed prezentacją na stronach: index.php product.php

--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -1713,7 +1713,7 @@
         align-items: center;
         flex-direction: row-reverse;
         border-radius: 0;
-        padding: 0.5rem 0.8rem;
+        // padding: 0.5rem 0.8rem;
         z-index: 1;
         &:after {
             font-size: 1.8rem;
@@ -9461,7 +9461,7 @@
         }
     }
     .topBasket__sub {
-        padding: 0 1.4rem 0 1.8rem;
+        // padding: 0 1.4rem 0 1.8rem;
         strong {
             font-size: 1.8rem;
         }
@@ -9641,7 +9641,8 @@
         max-height: 52%;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        position: fixed;
+        transform: translate(25%, 10%);
         border-radius: 0;
     }
     .pswp__scroll-wrap {
@@ -12680,7 +12681,6 @@
     }
 }
 @media (max-width: 756.98px) {
-  
     .modal.--sizes-chart {
         .ui-table-reflow {
             tbody {
