--- a/style/scss/our/mainpage.scss
+++ b/style/scss/our/mainpage.scss
@@ -1,29 +1,29 @@
-@media all and (min-width:976px){
-div#main_banner1 {
-    max-height: 650px;
-    picture img{
-        min-width: 100vw;
+@media all and (min-width: 976px) {
+    div#main_banner1 {
+        max-height: 650px;
+        picture img {
+            min-width: 100vw;
+        }
+        a.slick-prev.slick-arrow {
+            left: 15px;
+        }
     }
-    a.slick-prev.slick-arrow {
-        left: 15px;
-    }
-}
 
-
-.slick-next, .slick-prev{
-    &:hover{
-        text-decoration: none;
+    .slick-next,
+    .slick-prev {
+        &:hover {
+            text-decoration: none;
+        }
     }
 }
-}
-.onasstepts{
-    span{
+.onasstepts {
+    span {
         display: block;
         padding: 5px;
     }
-    @media all and (max-width:500px){
+    @media all and (max-width: 500px) {
         flex-wrap: wrap;
-       > div {
+        > div {
             width: 50%;
             flex: 50%;
         }
@@ -61,4 +61,140 @@ div#main_banner1 {
     height: 4.8rem;
     background-position: -450px -50px;
     background-image: url(../img/icons.png);
+}
+
+$overlay-color: rgba(0, 0, 0, 0.5);
+
+.image-block {
+    min-height: 40rem;
+    position: relative;
+    color: white;
+    text-decoration: none !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 1rem;
+    &:hover {
+        .overlay {
+            background: $overlay-color;
+        }
+    }
+    .icon--right-arrow .ml-2 {
+        color: white;
+    }
+
+    .title-text {
+        font-size: 3rem;
+        font-weight: bold;
+        z-index: 1;
+        margin-left: 2rem;
+    }
+
+    .btn-like {
+        background-color: #b29370;
+        color: white;
+        padding: 1rem 2rem;
+        border-radius: 0.25rem;
+        z-index: 1;
+        margin-left: 2rem;
+        margin-bottom: 2rem;
+        &:hover {
+            background-color: #15120f;
+            color: white;
+        }
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    .overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+    }
+
+    @media all and (max-width: 976px) {
+        min-height: 30rem;
+        .title-text {
+            font-size: 2rem;
+        }
+        .btn-like {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+.banners {
+    .image-block {
+        min-height: 30rem;
+        position: relative;
+        color: white;
+        text-decoration: none !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        gap: 1rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
+}
+
+.content-collapse {
+    height: 210px;
+    overflow: hidden;
+    transition: height 0.3s ease;
+    padding: 1rem;
+}
+
+.expanded {
+    height: auto;
+}
+
+#footer-paragraph {
+    position: relative;
+    margin-bottom: 1.5rem;
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        right: 0;
+        height: 30px;
+        background: linear-gradient(to bottom, transparent, white);
+    }
+}
+
+#showMore {
+    position: absolute;
+    right: 0;
+    bottom: -15px;
+    cursor: pointer;
+    z-index: 1;
+    &:hover {
+        text-decoration: underline;
+        color: #b29370;
+    }
+}
+.footer-paragraph__element {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding: 0 1rem;
 }
