--- a/style/scss/our/productpage.scss
+++ b/style/scss/our/productpage.scss
@@ -73,7 +73,7 @@
 
 @import "product/blog";
 
-#psp {
+#pswp {
     @media screen and (min-width: 1200px) {
         position: fixed;
         left: 50%;
