--- a/style/scss/our/searchpage.scss
+++ b/style/scss/our/searchpage.scss
@@ -72,3 +72,7 @@ div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
     width: 100%;
     direction: ltr;
 }
+
+.filters__item {
+    list-style: none;
+}
