poprawki: product-page  - usunięte stany magazynowe  - przesunięte profil smakowy  index-page  - poprawka wyglądu bloga

--- a/style/scss/IAI/bootstrap.scss
+++ b/style/scss/IAI/bootstrap.scss
@@ -4194,7 +4194,7 @@ img.b-loaded {
         margin-right: auto;
     }
 }
-#search {
+.search-product {
     .product {
         transition: box-shadow 0.3s ease-in-out;
         box-shadow: 0 0 0 0px transparent inset;
