--- a/style/scss/our/mainpage.scss
+++ b/style/scss/our/mainpage.scss
@@ -66,8 +66,8 @@
 $overlay-color: rgba(0, 0, 0, 0.5);
 
 .image-block {
-    min-height: 40rem;
     position: relative;
+    min-height: 40rem;
     color: white;
     text-decoration: none !important;
     display: flex;
@@ -75,18 +75,32 @@ $overlay-color: rgba(0, 0, 0, 0.5);
     justify-content: flex-end;
     align-items: flex-start;
     gap: 1rem;
+
     &:hover {
         .overlay {
             background: $overlay-color;
         }
+
+        .title-text,
+        .article-text {
+            color: #c9d3dd;
+        }
     }
+
     .icon--right-arrow .ml-2 {
-        color: white;
+        color: #c9d3dd;
     }
 
     .title-text {
         font-size: 3rem;
         font-weight: bold;
+        z-index: 1;
+        margin-left: 2rem;
+        top: 0;
+    }
+
+    .article-text {
+        font-size: 1.5rem;
         z-index: 1;
         margin-left: 2rem;
     }
@@ -99,6 +113,7 @@ $overlay-color: rgba(0, 0, 0, 0.5);
         z-index: 1;
         margin-left: 2rem;
         margin-bottom: 2rem;
+
         &:hover {
             background-color: #15120f;
             color: white;
@@ -118,17 +133,27 @@ $overlay-color: rgba(0, 0, 0, 0.5);
         position: absolute;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+        transition: background 0.3s ease; /* Dodano przejście dla tła */
     }
 
     @media all and (max-width: 976px) {
         min-height: 30rem;
+
         .title-text {
             font-size: 2rem;
         }
+
         .btn-like {
             font-size: 1.5rem;
         }
+    }
+}
+
+.image-block.large {
+    min-height: 60rem;
+    @media screen and (max-width: 760px) {
+        min-height: 40rem;
     }
 }
 
