--- a/style/scss/IAI/button.scss
+++ b/style/scss/IAI/button.scss
@@ -118,7 +118,7 @@
                     text-decoration: underline;
                     color: #333;
                     &:hover {
-                        color: #ffffff;
+                        color: #b29370;
                     }
                 }
             }
