Deleted image and icon files, updated background image URLs

--- a/old/product.css
+++ b/old/product.css
@@ -72,7 +72,7 @@ samp {
     content: " ";
     height: 65px;
     width: 75px;
-    background-image: url(../img/icons.png);
+    background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
     background-position: -296px -52px;
 }
 
@@ -16909,7 +16909,7 @@ div.ui-helper-hidden-accessible {
     width: 4rem;
     height: 4rem;
     background-position: -100px -75px;
-    background-image: url(../img/icons.png);
+    background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
 }
 
 @media (min-width: 979px) {
