--- a/style/scss/our/header.scss
+++ b/style/scss/our/header.scss
@@ -9,7 +9,7 @@
             width: 190px;
             height: 175px;
             background-position: 0 -193px;
-            background-image: url(../img/icons.png);
+            background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
         }
     }
     .small {
@@ -20,7 +20,7 @@
             width: 165px;
             height: 49px;
             background-position: -500px -50px;
-            background-image: url(../img/icons.png);
+            background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
         }
     }
 }
