--- a/style/scss/our/productpage.scss
+++ b/style/scss/our/productpage.scss
@@ -14,7 +14,7 @@
             width: 1.75rem;
             height: 1.75rem;
             background-position: -250px -100px;
-            background-image: url(../img/icons.png);
+            background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
         }
         &.half:before {
             background-position: -450px -100px;
@@ -61,7 +61,7 @@
         content: " ";
         width: 3.4rem;
         height: 5.1rem;
-        background-image: url(../img/icons.png);
+        background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
     }
     &.img-method313:before {
         background-position: -250px -125px;
