zmiany na stronach produktu i search

--- a/style/scss/IAI/bootstrap.scss
+++ b/style/scss/IAI/bootstrap.scss
@@ -4209,7 +4209,7 @@ img.b-loaded {
 
         .label_icons {
             position: absolute;
-            top: 10;
+            top: 10px;
             left: 0;
             text-align: left;
         }
