--- a/style/scss/our/mainpage.scss
+++ b/style/scss/our/mainpage.scss
@@ -96,6 +96,7 @@ $overlay-color: rgba(0, 0, 0, 0.5);
         font-weight: bold;
         z-index: 1;
         margin-left: 2rem;
+        color: white;
         top: 0;
     }
 
@@ -103,6 +104,7 @@ $overlay-color: rgba(0, 0, 0, 0.5);
         font-size: 1.5rem;
         z-index: 1;
         margin-left: 2rem;
+        margin-bottom: 2rem;
     }
 
     .btn-like {
@@ -111,7 +113,7 @@ $overlay-color: rgba(0, 0, 0, 0.5);
         padding: 1rem 2rem;
         border-radius: 0.25rem;
         z-index: 1;
-        margin-left: 2rem;
+
         margin-bottom: 2rem;
 
         &:hover {
@@ -222,4 +224,8 @@ $overlay-color: rgba(0, 0, 0, 0.5);
     margin-bottom: 1rem;
     margin-top: 1rem;
     padding: 0 1rem;
+}
+
+.navbar-subnav {
+    transform: translateY(10px);
 }
